Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
 <p>The concept of using 'EBFE' commands in lieu of breakpoints comes from the awesome mind of Shub Nigurrath over at ARTeam who credits an individual by the name of yates. </p>
 
 <p>Throughout the various incarnations of this non-intrusive debugger, Ghandi (another individual over at ARTeam) provided invaluable help and support in reaching the end goal of a functional debugging library.</p>
+
+<p>And finally credit to <a href="https://github.com/Exidous" class="user-mention">@Exidous</a> for the vast amounts of testing and bug finding in this latest implementation! It wouldn't be where it is today without your help!</p>
         </section>
 
         <footer>
